--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,18 @@
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <ul class="nav navbar-nav">
+      <li routerLinkActive="active"><a routerLink="auth">Authentification</a></li>
+      <li routerLinkActive="active"><a routerLink="appareils">Appareils</a></li>
+      <li routerLinkActive="active"><a routerLink="edit">Nouvel Appareil</a></li>
+      <li routerLinkActive="active"><a routerLink="users">List Utilisateurs</a></li>
+    </ul>
+    <div class="navbar-right">
+      <p>Vous êtes connécté depuis {{secondes}} secondes !</p>
+    </div>
+  </div>
+</nav>
 <div class="container">
   <div class="row">
-    <div class="col-xs-12">
-      <h2>Mes appareils</h2>
-      <p>Mis à jour: {{ lastUpdate | async | date: 'EEEE d MMMM y' | uppercase}}</p>
-      <ul class="list-group">
-        <app-appareil *ngFor="let appareil of appareils"
-                      [appareilName]="appareil.name" [appareilStatus]="appareil.status">
-        </app-appareil>
-      </ul>
-      <button class="btn btn-success" 
-              [disabled]="!isAuth" 
-              (click)="onAllumer()">
-              Tout Allumer</button>
-    </div>
+    <router-outlet></router-outlet>
   </div>
 </div>
